Always include "enable-webvr" in about:flags

The WebVR API and origin trial are always built so this flag should not depend
on VR device support.

BUG=678283
TEST=The flag appears in chrome://flags and navigator.getVRDisplays is exposed when enabled.

Review-Url: https://codereview.chromium.org/2615973002
Cr-Commit-Position: refs/heads/master@{#441816}

Former-commit-id: 9bc3d1863a23cbbf84d867cdc4bfa986810fdf1b